# Selectron

./: .gitignore  README.md  pyproject.toml
poms/Claude/: claude_page.py  elements.json  operations.json
poms/Cursor/: cursor_page.py  elements.json  operations.json
poms/Obsidian/: elements.json  obsidian_page.py  operations.json
selectron/: __init__.py  app_scanner.py  cli.py  components.py  config.py  discovery.py  driver.py  event_watcher.py  exceptions.py  models.py  monitor.py  pom_loader.py  registry.py  service.py  utils.py
selectron/apps/: __init__.py  claude.py  cursor.py  obsidian.py
selectron/controller/: __init__.py  agent_hub.py  demo.py  emulator.py  executors.py  factory.py  interfaces.py  iterm_bridge.py  mapper.py  mcp_client.py  menu.py  notification_center.py  team_windows.py  types.py
selectron/controller/bridges/: __init__.py
selectron/controller/bridges/iterm/: __init__.py  bridge.py  client.py  executor.py  window_manager.py
selectron/controller/core/: __init__.py  agent_hub.py  choice_engine.py  executors.py  mapper.py  menu.py  notification_center.py
